# libsvm

./: .gitignore  CMakeLists.txt  COPYRIGHT  FAQ.html  Makefile  Makefile.win  README  README.md  pom.xml  svm-boost-serialization.hpp  svm-predict  svm-predict.c  svm-scale  svm-scale.c  svm-train  svm-train.c  svm.cpp  svm.def  svm.h  svm_o.h
.github/workflows/: wheel.yml
chemo/: chemo_db.py  chemo_test.cpp  chemo_test.h  coo2bin.py  csv2bin.py  dense2bin.py
cmake/: FindOctave.cmake  LibSVMConfig.cmake.in  UseLibSVM.cmake
java/: CMakeLists.txt  Makefile  svm_predict.java  svm_scale.java  svm_toy.java  svm_train.java
java/libsvm/: svm.java  svm.m4  svm_model.java  svm_node.java  svm_parameter.java  svm_problem.java
matlab/: CMakeLists.txt  Makefile  README  README.md  heart_scale.mat  libsvmread.c  libsvmwrite.c  make.m  svm_model_matlab.c  svmpredict.c  svmtrain.c
python/: .README.un~  MANIFEST.in  Makefile  Makefile.win  README  README.md  commonutil.py  cross_validation.py  easy.py  grid.py  release.sh  setup.py  svm.py  svm_test.py  svmc.i  svmc_wrap.c  svmutil.py
python/examples/SVMRecipeClassifier/: README.md  recipe_classifier.py  test_recipe_classifier.py
python/libsvm/: commonutil.py  svm.py  svmutil.py
python_old/: Makefile  README  svm.py  svmc.i  svmc_wrap.c  test_cross_validation.py
svm-toy/gtk/: Makefile  callbacks.cpp
svm-toy/js/: Makefile  example.html  get_emscripten.sh  js-interfaces.c  libsvm-js-interfaces-wrapper.js  svm-toy.js  svm.cpp  svm.h
svm-toy/qt/: Makefile  svm-toy.cpp
svm-toy/windows/: svm-toy.cpp
tools/: CMakeLists.txt  README  README.md  checkdata.py  converted_data.txt  csv2libsvm.py  data.csv  easy.py  grid.py  subset.py
windows/: libsvmread.mexw32  libsvmread.mexw64  libsvmwrite.mexw32  libsvmwrite.mexw64  svmpredict.mexw32  svmpredict.mexw64  svmtrain.mexw32  svmtrain.mexw64
windows/python/: svmc.pyd
